# pico-rp2040-no-sdk

./: .gitignore  CMakeLists.txt  README.md  boot_check.sh  usb_setup_steps.txt
boot/: boot2.S  boot2_checked.S  vectors.S
src/: main.c  startup.c
src/hal/: gpio.c  gpio.h
src/kernel/: CMakeLists.txt  kernel.c
src/reg/: ppb.h  sio.h  usbctrl.h
src/reg/apb/: io_bank0.h  resets.h  xosc.h
src/regs/: gpio.h  usb.h
src/serial/: usb.c  usb.h
